--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,7 +34,7 @@
     <header>
         <nav id="navigation">
             <a class="brand" href="/">
-                <img src="/images/{{ site.inc.logo }}" alt="Inc">
+                <img src="{{ site.url }}/images/{{ site.inc.logo }}" alt="Inc">
             </a>
             {% if site.inc.product_link %}<a href="{{ site.inc.product_link }}">Product</a>{% endif %}
             {% if site.inc.about_link %}<a href="{{ site.inc.about_link }}">About</a>{% endif %}
