--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,7 +33,7 @@
 <section class="site-nav">
     <header>
         <nav id="navigation">
-            <a class="brand" href="/">
+            <a class="brand" href="{{ site.url }}">
                 <img src="{{ site.url }}/images/{{ site.inc.logo }}" alt="Inc">
             </a>
             {% if site.inc.product_link %}<a href="{{ site.inc.product_link }}">Product</a>{% endif %}
