--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -54,9 +54,9 @@
         
         <nav>
             <a href="{{ site.inc.url }}">{{ site.inc.company }}</a> &middot;
-            <a href="/">Blog</a> &middot;
-            {% if site.inc.product_link %}<a href="{{ site.inc.product_link }}">Product</a> &middot; {% endif %}
-            {% if site.inc.about_link %}<a href="{{ site.inc.about_link }}">About</a>{% endif %}
+            <a href="/">Blog</a>
+            {% if site.inc.product_link %} &middot; <a href="{{ site.inc.product_link }}">Product</a>{% endif %}
+            {% if site.inc.about_link %} &middot; <a href="{{ site.inc.about_link }}">About</a>{% endif %}
         </nav>
         
         <nav class="social">
