--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,8 +33,8 @@
 <section class="site-nav">
     <header>
         <nav id="navigation">
-            <a class="brand" href="{{ site.url }}">
-                <img src="{{ site.url }}/images/{{ site.inc.logo }}" alt="Inc">
+            <a class="brand" href="/">
+                <span class="logo" title="{{ site.inc.title }}">MD</span>
             </a>
             {% if site.inc.product_link %}<a href="{{ site.inc.product_link }}">Product</a>{% endif %}
             {% if site.inc.about_link %}<a href="{{ site.inc.about_link }}">About</a>{% endif %}
