--- a/_assets/stylesheets/_nav.scss
+++ b/_assets/stylesheets/_nav.scss
@@ -1,6 +1,5 @@
 .site-nav {
     background:#fff;
-    height:80px;
     position:absolute;
     left:0;
     right:0;
@@ -14,6 +13,13 @@
     .caret {
         opacity:0.2;
     }
+  
+    .brand .logo {
+        border: 4px solid black;
+        padding: 7px;
+        color: black; 
+        display: inline-block;
+    }    
     
     .brand img {
         height:40px;
@@ -28,7 +34,6 @@
     nav {
         padding:22px 30px;
         float:left;
-        height:80px;
         display:table-cell;
     }
     
